--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,12 @@
     <artifactId>sendgrid-java</artifactId>
     <version>4.4.1</version>
 </dependency>
-        
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+<dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>27.1-jre</version>
+</dependency>
 
 	</dependencies>
 
